--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Judith Ring]
-description: [Composer and Artist]
+description: [Composer | Musician | Artist | Producer]
