--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: [Judith Ring]
-description: [Composer and Musician]
+description: [Composer, Musician and Artist]
+google_analytics: [UA-33406317-1]
