composer, musician and artist

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: [Judith Ring]
-description: [Composer, Musician and Artist]
+description: "Composer, Musician and Artist"
 google_analytics: [UA-33406317-1]
