Fix build break

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-cayman
 title: [Judith Ring]
 description: "Composer, Musician and Artist"
 google_analytics: [UA-33406317-1]
+github: [metadata]
